--- a/home.css
+++ b/home.css
@@ -5,7 +5,7 @@
 
 .main{
     width: 100%;
-    background: linear-gradient(to top, rgba(0,0,0,0.5)50%,rgba(0,0,0,0.5)50%), url(1.gif);
+    background: linear-gradient(to top, rgba(0, 0, 0, 0.5)50%,rgba(0,0,0,0.5)50%), url(1.gif);
     background-position: center;
     background-size: cover;
     height: 100vh;
@@ -15,13 +15,22 @@
     width: 100%;
     height: 70px;
     margin: auto;
+    display: inline-flex;
 }
 
 .icon{
     width: 200px;
     float: left;
     height: 60px;
-    margin-left: 50px;
+    margin-left: 2%;
+}
+
+.responsive{
+    display: none;
+    height: 40px;
+}
+.dropdown-content a{
+    display: none;
 }
 
 .logo{
@@ -68,8 +77,8 @@ ul li a:hover{
 
 .search{
     width: 330px;
-    float: left;
-    margin-left: 350px;
+    float: inline-end;
+    margin-left: 27%;
 }
 
 .srch{
@@ -93,7 +102,7 @@ ul li a:hover{
     height: 30px;
     background: #3c9eee;
     border: 2px solid #3c9eee;
-    margin-top: 13px;
+    margin-top: 19px;
     color: #fff;
     font-size: 15px;
     border-bottom-left-radius: 15px;
@@ -113,7 +122,7 @@ ul li a:hover{
     height: 30px;
     background: #3c9eee;
     border: 2px solid #3c9eee;
-    margin-top: 13px;
+    margin-top: 19px;
     color: #fff;
     font-size: 15px;
     border-top-right-radius: 15px;
@@ -129,7 +138,7 @@ ul li a:hover{
 }
 
 .content{
-    width: 1200px;
+    width: 100%;
     height: auto;
     margin: auto;
     color: #fff;
@@ -187,8 +196,8 @@ ul li a:hover{
     height: 410px;
     background: linear-gradient(to top, rgba(0,0,0,0.8)50%,rgba(0,0,0,0.8)50%);
     position: absolute;
-    top: -20px;
-    left: 870px;
+    top: -13%;
+    left: 70%;
     transform: translate(0%,-5%);
     border-radius: 10px;
     padding: 25px;
@@ -297,4 +306,60 @@ ul li a:hover{
 }
 .icons ion-icon:hover{
     color: #3c9eee;
+}
+
+@media screen and (max-width: 800px){
+    .response{
+        margin-top: 18px;
+        margin-left: 10px;
+        height: 35px;
+        width: 35px;
+        background-color: #3c9eee;
+        border-radius: 5px;
+    }
+    .responsive{
+        display: inline-block;
+        margin: 3px;
+        height: 30px;
+        width: 30px;
+    }
+
+    .dropdown-content {
+        display: none;
+        position: absolute;
+        border-radius: 5px;
+        background-color: #3c9eee;
+        min-width: 160px;
+        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+        z-index: 1;
+    }
+
+    .dropdown-content a {
+        color: black;
+        padding: 12px 16px;
+        text-decoration: none;
+        display: block;
+    }
+    .dropdown-content a:hover {
+        background-color: #f1f1f1
+    }
+    .response:hover .dropdown-content{
+        display: block;
+    }
+    
+    .menu{
+        display: none;
+    }
+    
+    .form{
+        display: none;
+        width: 250px;
+        height: 410px;
+        background: linear-gradient(to top, rgba(0,0,0,0.8)50%,rgba(0,0,0,0.8)50%);
+        position: absolute;
+        top: -5%;
+        left: 30%;
+        border-radius: 10px;
+        padding: 25px;
+    }
 }
