--- a/home.css
+++ b/home.css
@@ -350,15 +350,40 @@ ul li a:hover{
     .menu{
         display: none;
     }
-    
-    .form{
+    .btn{
+        width: 80px;
+        height: 30px;
+        margin-right: 6%;   
+        border-radius: 15px;
+    }
+    .btn2{
         display: none;
-        width: 250px;
-        height: 410px;
-        background: linear-gradient(to top, rgba(0,0,0,0.8)50%,rgba(0,0,0,0.8)50%);
-        position: absolute;
-        top: -5%;
-        left: 30%;
+    }
+
+    .content{
+        margin-top: 20%;
+    }
+        
+    .content h1{
+        font-size: 35px;
+        padding-left: 20px;
+        margin-top: 9%;
+    }
+    .content .cn{
+        width: 100px;
+        height: 30px;
+        font-size: 13px;
+        border-radius: 10px;
+    }
+        
+    .content span{
+        color: #3c9eee;
+        font-size: 45px;
+    }
+
+    .form{
+        top: -20%;
+        left: 20%;
         border-radius: 10px;
         padding: 25px;
     }
