--- a/home.css
+++ b/home.css
@@ -353,7 +353,7 @@ ul li a:hover{
     .btn{
         width: 80px;
         height: 30px;
-        margin-right: 10%;   
+        margin-left: 5%;
         border-radius: 15px;
     }
     .btn2{
